--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600&display=swap");
 
+html{
+  scroll-behavior: smooth;
+}
 * {
   font-family: "Outfit", sans-serif;
 }
