--- a/frontend/src/pages/ActivitiesPage/ActivitiesPage.scss
+++ b/frontend/src/pages/ActivitiesPage/ActivitiesPage.scss
@@ -27,6 +27,9 @@
     border: 1px solid white;
     background-clip: text;
     -webkit-background-clip: text;
+    &.dark {
+      color: var(--primary-color);
+    }
   }
   .starImg {
     position: absolute;
