--- a/frontend/src/components/Jeea/Jeea.scss
+++ b/frontend/src/components/Jeea/Jeea.scss
@@ -31,6 +31,10 @@
         text-align: center;
         border: 1px solid white;
         background-clip: text;
+
+        &.dark {
+          color: var(--primary-color);
+        }
       }
 
       .starImg {
