--- a/frontend/src/components/Services/Services.scss
+++ b/frontend/src/components/Services/Services.scss
@@ -24,6 +24,10 @@
         border: 1px solid white;
         background-clip: text;
         -webkit-background-clip: text;
+
+        &.dark {
+          color: var(--primary-color);
+        }
       }
 
       .starImg {
