--- a/frontend/src/pages/TeamsPage/TeamsPage.scss
+++ b/frontend/src/pages/TeamsPage/TeamsPage.scss
@@ -17,7 +17,7 @@
       align-items: center;
       width: 100%;
       justify-content: center;
-      gap: 5rem;
+      gap: 2rem;
     }
 
     &-lead {
@@ -30,6 +30,10 @@
       border: 3px solid var(--secondary-color);
       text-align: center;
       overflow: hidden;
+
+      &.dark {
+        border: 3px solid var(--primary-color);
+      }
 
       img {
         width: 100%;
@@ -47,9 +51,13 @@
 }
 
 .hr {
-  background-color: black;
+  background-color: var(--secondary-color);
   transform: rotate(90deg);
   margin: 0;
   padding: 0;
-  width: 250px;
+  width: 150px;
+
+  &.dark {
+    background-color: var(--primary-color);
+  }
 }
