--- a/frontend/src/components/navbar/Navbar.scss
+++ b/frontend/src/components/navbar/Navbar.scss
@@ -90,6 +90,7 @@
     border: 0;
     border-radius: 1rem;
     padding: 0.3em 0.8em;
+    cursor: pointer;
     .icon__mode {
       width: 1.2rem;
     }
