--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -30,6 +30,7 @@ html {
     border-radius: 1rem;
     border: 0;
     transition: all 0.5s;
+    cursor: pointer;
 
     //colors
     background-color: var(--dark-color);
