--- a/frontend/src/pages/TeamsPage/TeamsPage.scss
+++ b/frontend/src/pages/TeamsPage/TeamsPage.scss
@@ -62,7 +62,7 @@
   }
 }
 
-@media (max-width:994px) {
+@media (max-width: 994px) {
   .teams__side-container {
     flex-direction: column;
   }
@@ -88,5 +88,20 @@
     .title {
       font-size: 1.1rem;
     }
+  }
+}
+
+.progress-bar {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 10px;
+  transform-origin: 0%;
+  z-index: 7;
+  background-color: var(--secondary-color);
+
+  &.dark {
+    background-color: var(--primary-color);
   }
 }
