--- a/frontend/src/components/Contact/Contact.scss
+++ b/frontend/src/components/Contact/Contact.scss
@@ -72,25 +72,23 @@
         resize: none;
       }
     }
-    
   }
 }
 
-@media (min-width:765px) {
-  .button-main{
+@media (min-width: 765px) {
+  .button-main {
     margin: auto;
     width: 15rem;
-  } 
+  }
 }
 @media (max-width: 764px) {
-  
   .container {
     padding: 1rem;
     height: 120%;
-    width: 95%;
-     .content {
+    // width: 95%;
+    .content {
       width: 76%;
-     }
+    }
   }
   .container .contact-text .title__container .title {
     font-size: 1.5rem;
@@ -103,12 +101,9 @@
       height: 100px;
     }
   }
-  .button-main {
-    width: 100%;
-  }
 }
 @media (max-width: 390px) {
-  .container .contact-text .title__container .title  {
+  .container .contact-text .title__container .title {
     font-size: 1.2rem;
   }
 }
