--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -43,11 +43,12 @@ html {
     @media only screen and (max-width: 1000px) {
       font-size: medium;
       height: 7vh;
-      width: 20vw;
+      // width: 20vw;
     }
 
     @media only screen and (max-width: 900px) {
       height: 2.5rem;
+      // width: 100%;
     }
 
     &.dark {
@@ -87,7 +88,7 @@ html {
 
     @media only screen and (max-width: 900px) {
       height: 2.5rem;
-      width: auto;
+      width: 100%;
     }
 
     &.dark {
