--- a/frontend/src/pages/ActivitiesPage/ActivitiesPage.scss
+++ b/frontend/src/pages/ActivitiesPage/ActivitiesPage.scss
@@ -105,16 +105,45 @@
   }
 
   &__card {
-    padding: 3rem 1.5rem;
+    display: flex;
+    flex-direction: row;
+    gap: 4rem;
+    padding: 3.2rem 3rem;
     width: 80%;
-    background-color: white;
+    background-color: rgb(255, 248, 248);
     border-radius: 25px;
+    color: var(--secondary-color);
 
-    &-title {
-      font-weight: 800;
+    &-right {
+      width: 70%;
+
+      &-title {
+        font-weight: 600;
+        margin-bottom: -0.5px;
+      }
+
+      &-info {
+        color: gray;
+        font-size: 0.9rem;
+      }
+
+      &-desc {
+        color: black;
+        margin: 2rem 0;
+      }
     }
 
-    &-desc {
+    &-left {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 50%;
+
+      &-img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
