--- a/frontend/src/components/Cjem/Cjem.scss
+++ b/frontend/src/components/Cjem/Cjem.scss
@@ -1,9 +1,21 @@
 .cjem {
   padding: 10px;
   width: 100%;
+  position: relative;
 
   @media screen and (min-width: 1200px) {
     height: 100vh;
+  }
+
+  &__back {
+    position: absolute;
+    width: 100%;
+    // height: 100vh;
+    right: 50%;
+    mix-blend-mode: screen;
+    &.dark {
+      opacity: 25%;
+    }
   }
 
   display: flex;
@@ -16,6 +28,7 @@
     flex-direction: column;
     align-items: center;
     gap: 3rem;
+    z-index: 3;
     flex-wrap: wrap;
 
     .title__container {
@@ -30,11 +43,30 @@
         width: fit-content;
         text-align: center;
         border: 1px solid white;
-        background-clip: text;
+        background: radial-gradient(
+          51.72% 61.73% at 50% 50%,
+          #4358ff 0%,
+          #1f2656 63.85%
+        );
         -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-fill-color: transparent;
+
+        mix-blend-mode: normal;
 
         &.dark {
-          color: var(--primary-color);
+          background: radial-gradient(
+            50% 50% at 50% 50%,
+            #ffffff 0%,
+            #ffb13e 100%
+          );
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
+          text-fill-color: transparent;
+
+          mix-blend-mode: normal;
         }
       }
 
@@ -69,6 +101,7 @@
 
   .cjemImg {
     width: 25rem;
+    mix-blend-mode: multiply;
     @media screen and (max-width: 1200px) {
       width: 20rem;
     }
