--- a/frontend/src/components/Services/Services.scss
+++ b/frontend/src/components/Services/Services.scss
@@ -1,5 +1,30 @@
 .cards {
   padding: 6rem 0;
+  position: relative;
+
+  &__back1 {
+    position: absolute;
+    mix-blend-mode: screen;
+    width: 100%;
+    // height: 100vh;
+    right: 50%;
+    top: 0;
+    &.dark {
+      opacity: 25%;
+    }
+  }
+
+  &__back2 {
+    position: absolute;
+    mix-blend-mode: screen;
+    width: 100%;
+    // height: 100vh;
+    left: 45%;
+    bottom: 0;
+    &.dark {
+      opacity: 25%;
+    }
+  }
 
   &__container {
     width: 85%;
@@ -22,11 +47,30 @@
         width: fit-content;
         text-align: center;
         border: 1px solid white;
-        background-clip: text;
+        background: radial-gradient(
+          51.72% 61.73% at 50% 50%,
+          #4358ff 0%,
+          #1f2656 63.85%
+        );
         -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-fill-color: transparent;
+
+        mix-blend-mode: normal;
 
         &.dark {
-          color: var(--primary-color);
+          background: radial-gradient(
+            50% 50% at 50% 50%,
+            #ffffff 0%,
+            #ffb13e 100%
+          );
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          background-clip: text;
+          text-fill-color: transparent;
+
+          mix-blend-mode: normal;
         }
       }
 
@@ -69,6 +113,10 @@
         align-items: center;
         justify-content: center;
         padding-top: 0;
+      }
+
+      .card-text {
+        text-align: center;
       }
     }
   }
