--- a/frontend/src/pages/ActivitiesPage/ActivitiesPage.scss
+++ b/frontend/src/pages/ActivitiesPage/ActivitiesPage.scss
@@ -28,7 +28,13 @@
     background-clip: text;
     -webkit-background-clip: text;
     &.dark {
-      color: var(--primary-color);
+      background: radial-gradient(50% 50% at 50% 50%, #ffffff 0%, #ffb13e 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-fill-color: transparent;
+
+      mix-blend-mode: normal;
     }
   }
   .starImg {
