--- a/frontend/src/pages/TeamsPage/TeamsPage.scss
+++ b/frontend/src/pages/TeamsPage/TeamsPage.scss
@@ -1,3 +1,43 @@
+.teams-page {
+  position: relative;
+
+  &__back1 {
+    position: absolute;
+    mix-blend-mode: screen;
+    width: 100%;
+    // height: 100vh;
+    left: 40%;
+    top: 0;
+    &.dark {
+      opacity: 25%;
+    }
+  }
+
+  &__back2 {
+    position: absolute;
+    mix-blend-mode: screen;
+    width: 100%;
+    // height: 100vh;
+    right: 45%;
+    top: 30%;
+    &.dark {
+      opacity: 25%;
+    }
+  }
+
+  &__back3 {
+    position: absolute;
+    mix-blend-mode: screen;
+    width: 100%;
+    // height: 100vh;
+    left: 45%;
+    bottom: 0;
+    &.dark {
+      opacity: 25%;
+    }
+  }
+}
+
 .teams {
   display: flex;
   justify-content: center;
@@ -6,6 +46,7 @@
   padding: 7rem 5rem;
 
   &__side {
+    z-index: 3;
     margin-top: 7rem;
     display: flex;
     flex-direction: column;
