--- a/frontend/src/components/navbar/Navbar.scss
+++ b/frontend/src/components/navbar/Navbar.scss
@@ -76,7 +76,7 @@
       font-size: 0.8rem;
       font-weight: 600;
       text-decoration: none;
-      color: black;
+      color: var(--secondary-color);
     }
   }
 
