added some changes again related to design

--- a/frontend/src/components/Cjem/Cjem.scss
+++ b/frontend/src/components/Cjem/Cjem.scss
@@ -16,6 +16,10 @@
     &.dark {
       opacity: 25%;
     }
+    @media only screen and (max-width: 768px) {
+      width: 200%;
+      right: 0%;
+    }
   }
 
   display: flex;
@@ -108,7 +112,8 @@
   &.dark {
     filter: none;
   }
-  @media screen and (max-width: 1200px) {
-    width: 20rem;
+  @media screen and (max-width: 800px) {
+    width: 100%;
+    margin: 3rem 0;
   }
 }
