--- a/frontend/src/components/Jeea/Jeea.scss
+++ b/frontend/src/components/Jeea/Jeea.scss
@@ -18,6 +18,10 @@
     &.dark {
       opacity: 25%;
     }
+    @media only screen and (max-width: 768px) {
+      width: 200%;
+      left: 0%;
+    }
   }
 
   &__container {
@@ -94,6 +98,7 @@
         font-weight: 400;
         font-size: 1.4rem;
         z-index: 5;
+        max-width: 100%;
       }
     }
   }
@@ -107,8 +112,9 @@
     &.dark {
       filter: none;
     }
-    @media screen and (max-width: 1200px) {
-      width: 20rem;
+    @media screen and (max-width: 800px) {
+      width: 100%;
+      margin: 3rem 0;
     }
   }
 }
