--- a/frontend/src/components/Services/Services.scss
+++ b/frontend/src/components/Services/Services.scss
@@ -12,6 +12,10 @@
     &.dark {
       opacity: 25%;
     }
+    @media only screen and (max-width: 768px) {
+      width: 200%;
+      right: 0%;
+    }
   }
 
   &__back2 {
@@ -23,6 +27,10 @@
     bottom: 0;
     &.dark {
       opacity: 25%;
+    }
+    @media only screen and (max-width: 768px) {
+      width: 200%;
+      left: 0%;
     }
   }
 
@@ -42,9 +50,12 @@
         background-color: rgba(255, 255, 255, 0.9);
         box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
         backdrop-filter: blur(24px);
+        font-size: 2.5rem;
         border-radius: 20px;
-        padding: 10px 16px;
+        padding: 0.75rem 1.5rem;
         width: fit-content;
+        text-align: center;
+        border: 1px solid white;
         text-align: center;
         border: 1px solid white;
         background: radial-gradient(
