--- a/frontend/src/components/Contact/Contact.scss
+++ b/frontend/src/components/Contact/Contact.scss
@@ -94,8 +94,11 @@
       input {
         height: 3rem;
         border-radius: 10px;
+        background-color: rgb(237, 237, 237);
       }
       textarea {
+        background-color: rgb(237, 237, 237);
+
         max-height: 10rem;
         min-height: 10rem;
         border-radius: 10px;
