--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -7,6 +7,52 @@
   position: relative;
   overflow-y: hidden;
 
+  .video-player {
+    position: absolute;
+    z-index: 20;
+    width: 85%;
+    border: var(--dark-color) 0.9rem solid;
+    border-radius: 20px;
+
+    .close-btn {
+      position: absolute;
+      z-index: inherit;
+      right: 10px;
+      top: 10px;
+      background: linear-gradient(180deg, #1614d1 0%, #1f2656 35.94%);
+      color: white;
+      border: 0;
+      border-radius: 0.7rem;
+      padding: 0.3em 0.8em;
+      cursor: pointer;
+
+      .icon__mode {
+        width: 1.2rem;
+      }
+    }
+  }
+
+  &__socials {
+    position: absolute;
+    left: 20%;
+    padding: 0.75rem 0.5rem;
+    z-index: 5;
+    background: rgba(255, 255, 255, 0.23);
+    box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
+    backdrop-filter: blur(24px);
+    border-radius: 20px;
+    //
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+
+    .social {
+      width: 1.2rem;
+    }
+  }
+
   &__line {
     position: absolute;
     right: 21%;
@@ -39,7 +85,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    z-index: 2;
+    z-index: 10;
     gap: 0.8rem;
 
     &-slogan {
