--- a/frontend/src/pages/ServicesPage/ServicesPage.scss
+++ b/frontend/src/pages/ServicesPage/ServicesPage.scss
@@ -113,9 +113,11 @@
     backdrop-filter: blur(10px);
 
     &.dark {
-      background-color: var(--primary-color);
+      background: linear-gradient(180deg, #ffe4bb 0%, #ffab2e 30%);
+      box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.12);
+      backdrop-filter: blur(10px);
       color: black;
-      font-weight: 400;
+      font-weight: 600;
 
       &:hover {
         background-color: #ff7802;
@@ -143,7 +145,7 @@
 }
 
 .services__card {
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -151,10 +153,14 @@
   gap: 2rem;
   border-radius: 20px;
   position: relative;
+  max-width: 100%;
 
   &-title {
     font-size: 1.5rem;
-    white-space: nowrap;
+    // white-space: nowrap;
+  }
+  &-desc {
+    white-space: pre-wrap;
   }
 }
 
