--- a/client/src/components/Jeea/Jeea.scss
+++ b/client/src/components/Jeea/Jeea.scss
@@ -86,8 +86,8 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      gap: 3rem;
       align-items: center;
-      // gap: 5rem;
       width: 100%;
 
       @media screen and (max-width: 1200px) {
@@ -98,7 +98,6 @@
         font-weight: 400;
         font-size: 1.4rem;
         z-index: 5;
-        max-width: 100%;
       }
     }
   }
