--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -11,11 +11,10 @@
     color: white;
   }
   &__element {
+    width: 100%;
     display: flex;
     align-items: center;
-    gap: 18%;
-    flex: 1;
-    justify-content: flex-end;
+    justify-content: space-between;
     position: relative;
   }
 
@@ -34,13 +33,13 @@
   }
 
   &__img {
-    height: 100%;
+    //height: 100%;
     width: 80px;
   }
 
   &__links {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     list-style: none;
     padding: 0;
