--- a/client/src/pages/RecrutePage/RecrutePage.scss
+++ b/client/src/pages/RecrutePage/RecrutePage.scss
@@ -8,6 +8,9 @@
 
   .recrutement {
     width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -19,7 +22,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: -1;
+  z-index: 10;
   backdrop-filter: blur(5px);
   border-radius: 10px;
   box-shadow: 0px 1px 7px 4px rgb(0 0 0 / 15%);
@@ -38,6 +41,8 @@
     text-align: center;
     margin: 15px;
     .title__container {
+      display: flex;
+      justify-content: center;
       position: relative;
       width: fit-content;
       margin: auto;
