--- a/client/src/pages/ServicesPage/ServicesPage.scss
+++ b/client/src/pages/ServicesPage/ServicesPage.scss
@@ -8,7 +8,7 @@
 
 .Title {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   position: relative;
 }
