--- a/client/src/pages/ProjectsPage/ProjectsPage.scss
+++ b/client/src/pages/ProjectsPage/ProjectsPage.scss
@@ -48,7 +48,7 @@
 
   .Title {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     position: relative;
   }
