--- a/client/src/pages/SignupPage/SignupPage.scss
+++ b/client/src/pages/SignupPage/SignupPage.scss
@@ -8,7 +8,7 @@
 
 .Title {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   position: relative;
   margin-bottom: 2rem;
