--- a/client/src/components/Cjem/Cjem.scss
+++ b/client/src/components/Cjem/Cjem.scss
@@ -58,6 +58,9 @@
         text-fill-color: transparent;
 
         mix-blend-mode: normal;
+        @media screen and (max-width: 500px) {
+          font-size: 2rem !important;
+        }
 
         &.dark {
           background: radial-gradient(
@@ -97,6 +100,9 @@
       flex-wrap: wrap;
       flex-direction: column;
     }
+    @media screen and (max-width: 600px) {
+      font-size: 1.1rem;
+    }
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
@@ -118,6 +124,6 @@
   }
   @media screen and (max-width: 800px) {
     width: 100%;
-    margin: 3rem 0;
+    margin: 0.5rem 0;
   }
 }
