--- a/client/src/pages/ProjectsPage/ProjectsPage.scss
+++ b/client/src/pages/ProjectsPage/ProjectsPage.scss
@@ -1,4 +1,4 @@
-.activities-page {
+.projects-page {
   position: relative;
 
   &__back1 {
@@ -39,12 +39,16 @@
 }
 
 // Cards Container
-.activities {
+.projects {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 7rem 5rem;
+
+  @media screen and (max-width: 1200px) {
+    padding: 7rem 1rem;
+  }
 
   .Title {
     display: flex;
@@ -109,8 +113,24 @@
     color: var(--secondary-color);
     z-index: 3;
 
+    @media screen and (max-width: 1200px) {
+      width: 50%;
+      align-items: center;
+      flex-direction: column-reverse;
+      &-right {
+        align-items: flex-start;
+        width: 100%;
+      }
+      &-left {
+        width: 100%;
+        &-img {
+          width: 100%;
+        }
+      }
+    }
+
     &-right {
-      width: 70%;
+      // width: 70%;
 
       &-title {
         font-weight: 600;
@@ -133,12 +153,6 @@
       align-items: center;
       justify-content: center;
       width: 50%;
-
-      &-img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-      }
     }
   }
 }
